--- a/biome.json
+++ b/biome.json
@@ -3,6 +3,9 @@
   "organizeImports": {
     "enabled": true
   },
+  "files": {
+    "ignore": ["server/.wrangler"]
+  },
   "linter": {
     "enabled": true,
     "rules": {
