--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@remix-run/react": "^2.16.0",
     "@remix-run/serve": "^2.16.0",
     "isbot": "^4.1.0",
+    "jose": "^6.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
