refactor: replace node to cloucflare

--- a/client/package.json
+++ b/client/package.json
@@ -5,22 +5,27 @@
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
+    "deploy": "pnpm run build && wrangler pages deploy",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc"
+    "start": "wrangler pages dev ./build/client",
+    "typecheck": "tsc",
+    "typegen": "wrangler types",
+    "preview": "pnpm run build && wrangler pages dev",
+    "cf-typegen": "wrangler types"
   },
   "dependencies": {
-    "@remix-run/node": "^2.16.0",
-    "@remix-run/react": "^2.16.0",
-    "@remix-run/serve": "^2.16.0",
+    "@remix-run/cloudflare": "^2.15.3",
+    "@remix-run/cloudflare-pages": "^2.15.3",
+    "@remix-run/react": "^2.15.3",
     "isbot": "^4.1.0",
     "jose": "^6.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.16.0",
+    "@cloudflare/workers-types": "^4.20250311.0",
+    "@remix-run/dev": "^2.15.3",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
@@ -36,7 +41,8 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.1.6",
     "vite": "^6.0.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.2.1",
+    "wrangler": "4.3.0"
   },
   "engines": {
     "node": ">=20.0.0"
