feat: adapt hashed password

--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
+    "test": "vitest",
     "copy:env": "cp .dev.vars.example .dev.vars"
   },
   "dependencies": {
