--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "packageManager": "pnpm@9.15.9",
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4"
+    "@biomejs/biome": "^1.9.4",
+    "vitest": "^3.0.9"
   }
 }
